--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         const status = document.getElementById("status");
         
         // --- 自分のURLに書き換えてください ---
-        const url = "ここに最新のGASのURLを貼り付け";
+        const url = "https://script.google.com/macros/s/AKfycbyJcWg_IoSL7x90GmzzC1wozJKz7P2XbtSSZRcj8obzv96HpcjDlAIMsCjgPVFIMAZ4fQ/exec";
 
         const payload = {
             name: document.getElementById("name").value,
@@ -72,3 +72,4 @@
 
 </body>
 </html>
+
